# guhsn

./: .env-example  .gitignore  config.py  pyproject.toml  readme.md  requirements.txt  run.py
app/: __init__.py  errors.py  ext.py
app/blueprints/: __init__.py
app/blueprints/auth/: forms.py  views.py
app/blueprints/main/: __init__.py  errors.py  request_hooks.py  views.py
app/blueprints/user/: forms.py  views.py
app/models/: role.py  user.py
app/scripts/: mail_server.py
app/services/: user_service.py
app/static/: package-lock.json  package.json
app/static/css/: base.css  style.css
app/templates/: base.html  index.html
app/templates/auth/: change-password.html  login.html  register.html  reset-password-request.html  settings.html
app/templates/email/: change-password.txt  confirm.html  confirm.txt  update-email.html  update-email.txt
app/templates/email/auth/: change-password.html  reset-password.html  reset-password.txt
app/templates/email/user/: change-password.html  change-password.txt  update-email.html  update-email.txt
app/templates/errors/: 400.html  404.html  500.html
app/templates/includes/: macros.html  navbar.html
app/templates/user/: change-password.html  settings.html
app/utils/: cli.py  security.py  send_mail.py
data/: dev.sqlite
migrations/versions/: 6da1a5eb6266_.py  abe1f07da3b5_.py  d4a0739ed265_added_password_field.py  ecaf095a551a_.py
tests/: test_basics.py
tests/test_models/: test_user_model.py
